Update client name and date in repair proposal

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
   <h1>Repair Proposal – Alienware Aurora R13</h1>
 
   <div class="section">
-    <p><strong>Client:</strong> [Client Name]</p>
+    <p><strong>Client:</strong> Jason</p>
     <p><strong>System:</strong> Alienware Aurora R13 – Service Tag: 8BCZ2L3</p>
-    <p><strong>Date:</strong> [Date]</p>
+    <p><strong>Date:</strong> January 27 2026</p>
   </div>
 
   <div class="section">
@@ -190,10 +190,10 @@
       </thead>
       <tbody>
         <tr>
-          <td>System Optimization & Maintenance<br><span class="small">(estimated 1.5–2.0 hours @ $100/hr)</span></td>
-          <td class="right">1.75</td>
+          <td>System Optimization & Maintenance</td>
+          <td class="right">0.75</td>
           <td class="right">$100.00</td>
-          <td class="right">$175.00</td>
+          <td class="right">$75.00</td>
         </tr>
       </tbody>
     </table>
